Issue 5480: 	Firebug command Inspect command language

--- a/extension/locale/pl/firebug-tracing.properties
+++ b/extension/locale/pl/firebug-tracing.properties
@@ -1,11 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-
-# Firebug tracing console menu items (located in Firebug's menu).
-
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):n\n
+# Firebug tracing console menu items (located in Firebug\'s menu).n\n
 Open_Firebug_Tracing=Otwórz śledzenie
 Always_Open_Firebug_Tracing=Zawsze otwieraj śledzenie
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
-
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).n\n
 title.Tracing=Śledzenie
 tracing.Show_Scope_Variables=Pokaż zmienne w zasięgu
 tracing.Show_Time=Pokaż czas
@@ -34,3 +31,64 @@ tracing.cmd.Load=Wczytaj z pliku
 tracing.cmd.tip.Load=Wczytaj zapisy dziennika z pliku
 tracing.cmd.Expand_All=Rozwiń wszystko
 tracing.cmd.Collapse_All=Zwiń wszystko
+tracing.cmd.Tools=Narzędzia
+tracing.cmd.tip.Tools=Narzędzia
+tracing.cmd.Clear_Browser_Cache=Wyczyść bufor przeglądarki
+tracing.cmd.tip.Clear_Browser_Cache=Wyczyść bufor przeglądarki
+tracing.cmd.Force_Garbage_Collector=Uruchom zbieracza śmieci
+tracing.cmd.tip.Force_Garbage_Collector=Uruchom zbieracza śmieci
+tracing.cmd.Open_Profile_Directory=Otwórz katalog profilu
+tracing.cmd.tip.Open_Profile_Directory=Otwórz katalog profilu
+tracing.option.A11Y_Description=Zagadnienia związane z dostępnością
+tracing.option.ACTIVATION_Description=Aktywacja Firebuga
+tracing.option.ACTIVITYOBSERVER_Description=Obserwator aktywności Firebuga
+tracing.option.ANNOTATIONS_Description=Adnotacja o witrynie Firebuga
+tracing.option.BP_Description=Punkty wstrzymania
+tracing.option.CACHE_Description=Bufor źródła
+tracing.option.COMMANDLINE_Description=Wiersz poleceń i jego podpowiedzi
+tracing.option.COMPILATION_UNITS_Description=Jednostki kompilacji skryptu
+tracing.option.CONSOLE_Description=Panel konsoli
+tracing.option.CSS_Description=Analizowanie CSS
+tracing.option.DISPATCH_Description=Zdarzenie wysyłania
+tracing.option.DOM_Description=DOM
+tracing.option.DOMPLATE_Description=Tworzenie Domplate
+tracing.option.EDITOR_Description=Edytor inline i autozakańczacz
+tracing.option.ERRORLOG_Description=Dziennik zdarzeń błędów JS, CSS, XML itp.
+tracing.option.ERRORS_Description=Błędy wewnętrzne Firebuga
+tracing.option.EVAL_Description=Ocena skryptu
+tracing.option.FBS_BP_Description=Obsługa punktów wstrzymania
+tracing.option.FBS_CREATION_Description=Obsługa tworzenia skryptu
+tracing.option.FBS_ERRORS_Description=Obsługa błędów
+tracing.option.FBS_FINDDEBUGGER_Description=Obsługa szukania debugera
+tracing.option.FBS_FUNCTION_Description=Funkcja obsługi
+tracing.option.FBS_JSDCONTEXT_Description=Obsługa debugera
+tracing.option.FBS_SRCUNITS_Description=Obsługa jednostek źródła
+tracing.option.FBS_STEP_Description=Obsługa intensyfikacji debugera JavaScriptu
+tracing.option.FBS_TRACKFILES_Description=Obsługa śledzonych plików
+tracing.option.FUNCTION_NAMES_Description=Nazwy funkcji JavaScriptu
+tracing.option.HISTORY_Description=Historia nawigacji
+tracing.option.HTML_Description=HTML
+tracing.option.HTTPOBSERVER_Description=Obserwator żądań HTTP
+tracing.option.INFOTIP_Description=Podpowiedzi
+tracing.option.INITIALIZE_Description=Inicjacja Firebuga
+tracing.option.INSPECT_Description=Inspektor
+tracing.option.JSONVIEWER_Description=Przeglądarka JSON
+tracing.option.LINETABLE_Description=Tabela wiersza skryptu
+tracing.option.LOCALE_Description=Lokalizacja
+tracing.option.LOCATIONS_Description=Lokalizacje źródła
+tracing.option.NET_Description=Panel Śieć
+tracing.option.NET_EVENTS_Description=Zdarzenia sieciowe
+tracing.option.OPTIONS_Description=Ustawienia Firebuga
+tracing.option.PANELS_Description=Panele
+tracing.option.SHORTCUTS_Description=Skróty klawiszowe
+tracing.option.SOURCEFILES_Description=Pliki źródłowe JavaScript
+tracing.option.SPY_Description=Obserwator XMLHttpRequests
+tracing.option.STACK_Description=Stos wywołań JavaScript
+tracing.option.STORAGE_Description=Zapisywanie ustawień
+tracing.option.SVGVIEWER_Description=Przeglądarka SVG
+tracing.option.FONTS_Description=Przeglądarka i informacje o czcionkach
+tracing.option.TOOLTIP_Description=Podpowiedź przycisku uruchomieniowego
+tracing.option.TOPLEVEL_Description=Najwyższy poziom JavaScriptu
+tracing.option.UI_LOOP_Description=Interfejs użytkownika debugowania JavaScriptu
+tracing.option.WINDOWS_Description=Okna i karty czujki
+tracing.option.XMLVIEWER_Description=Przeglądarka XML
