Issue 3230 (Pseudo-classes are not persistently shown in Style Side Panel) http://code.google.com/p/fbug/issues/detail?id=3230

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -480,14 +480,14 @@ style.option.tip.Only_Show_Applied_Styles=Just show styles applied to the elemen
 Show_User_Agent_CSS=Show User Agent CSS
 style.option.tip.Show_User_Agent_CSS=Also show the CSS defined by the user agent
 
-# LOCALIZATION NOTE (style.option.tip.active):
+# LOCALIZATION NOTE (style.option.label.active, style.option.tip.active):
 # Style side panel option tooltip (located in tab's option menu). If the option is set to true,
 # the Style side panel will simulate the element being activated and therefore display
 # :active pseudo-class styles
 style.option.label.active=:active
 style.option.tip.active=Display :active pseudo-class styles
 
-# LOCALIZATION NOTE (style.option.tip.hover):
+# LOCALIZATION NOTE (style.option.label.hover, style.option.tip.hover):
 # Style side panel option tooltip (located in tab's option menu). If the option is set to true,
 # the Style side panel will simulate the element being hovered and therefore display
 # :hover pseudo-class styles
