Issue 3407 (Add :focus to DOM node CSS Style viewing options) http://code.google.com/p/fbug/issues/detail?id=3407

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -494,6 +494,13 @@ style.option.tip.active=Display :active pseudo-class styles
 style.option.label.hover=:hover
 style.option.tip.hover=Display :hover pseudo-class styles
 
+# LOCALIZATION NOTE (style.option.label.focus, style.option.tip.focus):
+# Style side panel option tooltip (located in tab's option menu). If the option is set to true,
+# the Style side panel will simulate the element being focused and therefore display
+# :focus pseudo-class styles
+style.option.label.focus=:focus
+style.option.tip.focus=Display :focus pseudo-class styles
+
 # LOCALIZATION NOTE (css.label.Inspect_Declaration, css.tip.Inspect_Declaration):
 # CSS panel/Style side panel context menu option. Allows inspecting a font face of a web font
 # declaration inside the CSS panel
