Issue 3871 (Change color format) http://code.google.com/p/fbug/issues/detail?id=3871

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -480,6 +480,18 @@ style.option.tip.Only_Show_Applied_Styles=Just show styles applied to the elemen
 Show_User_Agent_CSS=Show User Agent CSS
 style.option.tip.Show_User_Agent_CSS=Also show the CSS defined by the user agent
 
+# LOCALIZATION NOTE (computed.option.label.Colors_As_Hex, computed.option.tip.Colors_As_Hex,
+#   computed.option.label.Colors_As_RGB, computed.option.tip.Colors_As_RGB,
+#   computed.option.label.Colors_As_HSL, computed.option.tip.Colors_As_HSL):
+# CSS panel, Style side panel and Computed side panel option (located in tab's option menu).
+# Allows switching the display of CSS colors between hex, rgb(a) and hsl(a) format
+computed.option.label.Colors_As_Hex=Colors As Hex
+computed.option.tip.Colors_As_Hex=Show colors in hexadecimal format
+computed.option.label.Colors_As_RGB=Colors As RGB
+computed.option.tip.Colors_As_RGB=Show colors in RGB format
+computed.option.label.Colors_As_HSL=Colors As HSL
+computed.option.tip.Colors_As_HSL=Show colors in HSL format
+
 # LOCALIZATION NOTE (style.option.label.active, style.option.tip.active):
 # Style side panel option tooltip (located in tab's option menu). If the option is set to true,
 # the Style side panel will simulate the element being activated and therefore display
