Issue 5518 (Show hint in Stack side panel when execution is not stopped) http://code.google.com/p/fbug/issues/detail?id=5518

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -400,6 +400,10 @@ callstack.tip.Expand_All=Expand all stack frame functions
 callstack.Collapse_All=Collapse All
 callstack.tip.Collapse_All=Collapse all stack frame functions
 
+# LOCALIZATION NOTE (callstack.Execution_not_stopped):
+# Message displayed in the Stack side panel if the script execution is not stopped.
+callstack.Execution_not_stopped=Stack frames are just shown when the script execution is stopped.
+
 # LOCALIZATION NOTE (ShowUserProps, ShowUserFuncs, ShowDOMProps, ShowDOMFuncs, ShowDOMConstants,
 # ShowOwnProperties, ShowOwnPropertiesTooltip, ShowEnumerableProperties, ShowEnumerablePropertiesTooltip,
 # ShowInlineEventHandlers):
