Properly localize Cookies panel using fbInternational

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -99,7 +99,7 @@ firecookie.removeallsession.tooltip=Remove all session cookies in the list.
 
 # LOCALIZATION NOTE (firecookie.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
 # examples: Create new cookie for www.softwareishard.com
-firecookie.createcookie.tooltip=Create new cookie for %S
+firecookie.createcookie.tooltip=Create a new cookie for %S
 
 # LOCALIZATION NOTE (firecookie.createcookie.defaultvalue): Default value for newly created cookie.
 firecookie.createcookie.defaultvalue=Value
