Tooltip for the Cookies panel tab

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -4,6 +4,7 @@ extensions.firecookie@janodvarko.cz.description=Cookie manager for Firebug. Fire
 
 # LOCALIZATION NOTE (firecookie.Panel): Title of the panel in Firebug's UI.
 firecookie.Panel=Cookies
+panel.tip.cookies=Allows inspecting and manipulating the cookies
 
 # LOCALIZATION NOTE (firecookie.Session): Label used to mark session cookies.
 firecookie.Session=Session
