Fix labels wording (Cookies panel)

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -231,7 +231,7 @@ firecookie.menu.Cookies=Cookies
 # firecookie.export.Export_For_Site, firecookie.export.Export_For_Site_Tooltip): Labels and 
 # tooltips for exporting menus available under Cookies menus.
 firecookie.export.Export_All_Cookies=Export All Cookies
-firecookie.export.Export_All_Cookies_Tooltip=Export all browser cookies into cookies.txt file
+firecookie.export.Export_All_Cookies_Tooltip=Export all browser cookies to cookies.txt file
 firecookie.export.Export_For_Site=Export Cookies For This Site
 firecookie.export.Export_For_Site_Tooltip=Export cookies for %S into cookies.txt file
 
@@ -278,7 +278,7 @@ firecookie.ToolsTooltip=Tools
 # LOCALIZATION NOTE (firecookie.ViewAll, firecookie.ViewAllTooltip) Label and tooltip for
 # view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
 firecookie.ViewAll=Show All Cookies
-firecookie.ViewAllTooltip=Open Cookie Manager
+firecookie.ViewAllTooltip=Open the built-in Cookie Manager
 
 # LOCALIZATION NOTE (firecookie.ViewExceptions, firecookie.ViewExceptionsTooltip) Label and
 # tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
