Issue 5538 (Panel names in Start Button tooltip are not translated) http://code.google.com/p/fbug/issues/detail?id=5538

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -51,6 +51,13 @@ pluralRule=1
 # example: 2 Total Firebugs
 plural.Total_Firebugs2=%1$S Total Firebug;%1$S Total Firebugs
 
+# LOCALIZATION NOTE (panel.status): Label showing the status of an activable panel
+# inside a tooltip when hovering the Start Button. Will be shown for each panel.
+# first %S = panel name
+# second %S = panel activation status
+# example: Console: On
+panel.status=%S: %S
+
 inBrowser=In Browser
 minimized=Minimized
 enablement.for_all_pages=for all pages
