Fix capitalization of cookie options

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -11,13 +11,13 @@ firecookie.Session=Session
 
 # LOCALIZATION NOTE (firecookie.AllowGlobally, firecookie.tip.AllowGlobally):
 # Label used for cookies permission.
-firecookie.AllowGlobally=Accept cookies from sites
+firecookie.AllowGlobally=Accept Cookies From Sites
 firecookie.tip.AllowGlobally=Accept all cookies by default or block all cookies by default
 
 # LOCALIZATION NOTE (firecookie.LogEvents, firecookie.tip.LogEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-firecookie.LogEvents=Show logs in console
+firecookie.LogEvents=Show Logs in Console
 firecookie.tip.LogEvents=Use to display various cookie events (changed, deleted) in the Console panel
 
 # LOCALIZATION NOTE (firecookie.clearWhenDeny): Label used in Cookies panel options menu (the
