Remove additional Paste menu + capitalization

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -85,7 +85,7 @@ firecookie.msg.Do_not_show_this_message_again=Do not show this message again
 
 # LOCALIZATION NOTE (firecookie.Confirm_cookie_removal): A label used for option (mini tab menu)
 # that says whether a confirmation dialog is displayed when removing cookies. 
-firecookie.Confirm_cookie_removal=Confirm cookie removal
+firecookie.Confirm_cookie_removal=Confirm Cookie Removal
 firecookie.tip.Confirm_cookie_removal=If checked, there is a confirmation dialog displayed before deleting all cookies in the list.
 
 # LOCALIZATION NOTE (firecookie.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
